fixes a bunch of layout bugs

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,7 @@ html, body {
 
 body {
     font-family: 'Roboto Mono', Courier, monospace;
+    background: rgba(0,0,0,0.87);
 }
 
 form[type="text"] {
@@ -96,12 +97,10 @@ p {
 
 main {
     /*border: 4px solid orange;*/
-    min-height: 100%;
-    background: rgba(0,0,0,0.87);
+    /*display: flex;*/
     color: #fff;
     float: right;
-    min-width: 75%;
-    display: flex;
+    width: 75%;
     align-items: center;
     padding: 30px;
 }
@@ -109,10 +108,9 @@ main {
 .main-wrapper {
     /*border: 4px solid green;*/
     margin: 0 auto;
-    display: flex;
+    /*display: flex;*/
     flex-direction: column;
     align-items: flex-end;
-    clear: both;
 }
 
 main a {
@@ -129,7 +127,6 @@ main a {
   /*border: 4px solid red;*/
   max-width: 25%;
   float: right;
-  margin: 30px 0 15px 0;
 }
 
 .grid {
